ALigned position options and other spacing issues

--- a/nuxeo-admin-console-web/angular-app/src/app/features/stream/components/stream-form/stream-form.component.scss
+++ b/nuxeo-admin-console-web/angular-app/src/app/features/stream/components/stream-form/stream-form.component.scss
@@ -122,6 +122,7 @@
 
       .radio-content {
         display: flex;
+        gap: 12px;
       }
 
       .field-group {
@@ -187,7 +188,8 @@
     display: flex;
     align-items: flex-start;
     width: 100%;
-    margin-top: 45px;
+    margin-top: 70px;
+    margin-left: 5px;
 
     .config-group {
       display: flex;
