--- a/nuxeo-admin-console-web/angular-app/src/styles.scss
+++ b/nuxeo-admin-console-web/angular-app/src/styles.scss
@@ -538,6 +538,7 @@ mat-radio-button.complex-radio {
 
   .mdc-label {
     padding-left: 0;
+    padding-top: 66px;
   }
 }
 
